<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.popularmovies.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop_description"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/backdrop_image" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_details"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:title="@string/details_activity_label" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_movie_poster"
                style="@style/iv_movie_poster"
                android:layout_width="@dimen/iv_movie_poster_details_width"
                android:layout_height="@dimen/iv_movie_poster_details_height"
                android:contentDescription="@string/poster_description"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/movie_poster" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_spacing"
                android:layout_marginStart="@dimen/default_spacing"
                android:ellipsize="none"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_movie_poster"
                tools:text="@string/tv_title" />

            <TextView
                android:id="@+id/tv_rating_label"
                style="@style/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rating_label"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_rating_data"
                style="@style/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating_label"
                tools:text="@string/tv_rating_data" />

            <RatingBar
                android:id="@+id/rb_movie_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_spacing"
                android:layout_marginStart="@dimen/medium_spacing"
                android:numStars="5"
                android:stepSize="0.1"
                android:theme="@style/customRatingBar"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rating_data"
                app:layout_constraintStart_toEndOf="@+id/tv_rating_data"
                app:layout_constraintTop_toTopOf="@+id/tv_rating_data"
                app:layout_constraintVertical_bias="0.5"
                tools:rating="4.25" />

            <TextView
                android:id="@+id/tv_release_date_label"
                style="@style/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_spacing"
                android:text="@string/tv_release_date_label"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating_data" />

            <TextView
                android:id="@+id/tv_release_date_data"
                style="@style/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label"
                tools:text="@string/tv_release_date_data" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
                tools:text="@string/tv_overview" />

            <TextView
                android:id="@+id/tv_trailers_label"
                style="@style/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_trailers_label"
                app:layout_constraintStart_toStartOf="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

            <FrameLayout
                android:id="@+id/layout_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/tv_trailers_label"
                app:layout_constraintTop_toBottomOf="@id/tv_trailers_label">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_spacing"
                    android:layout_marginRight="@dimen/default_spacing"
                    android:layout_marginTop="@dimen/medium_spacing"
                    android:scrollbars="horizontal"
                    tools:listitem="@layout/trailer_list_item" />

                <TextView
                    android:id="@+id/tv_trailers_error_message_display"
                    style="@style/details_error_message_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <ProgressBar
                    android:id="@+id/pb_trailers_loading_indicator"
                    android:layout_width="@dimen/pb_loading_indicator_size"
                    android:layout_height="@dimen/pb_loading_indicator_size"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_reviews_label"
                style="@style/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reviews_label"
                app:layout_constraintStart_toStartOf="@+id/tv_trailers_label"
                app:layout_constraintTop_toBottomOf="@+id/layout_trailers" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/tv_reviews_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_spacing"
                    android:scrollbars="horizontal"
                    tools:itemCount="3"
                    tools:listitem="@layout/review_list_item" />

                <TextView
                    android:id="@+id/tv_reviews_error_message_display"
                    style="@style/details_error_message_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

                <ProgressBar
                    android:id="@+id/pb_reviews_loading_indicator"
                    android:layout_width="@dimen/pb_loading_indicator_size"
                    android:layout_height="@dimen/pb_loading_indicator_size"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:src="@drawable/ic_not_fav"
        app:elevation="6dp"
        app:layout_anchor="@id/sv_details"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:src="@drawable/ic_fav"
        app:elevation="6dp"
        app:layout_anchor="@id/sv_details"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="12dp" />

</android.support.design.widget.CoordinatorLayout>